# resume

./: .gitignore  README.md  commit.py  reset_commit.py
1. react_responsive/: README.md  index.js
2. express_mongoose/: Dockerfile  README.md  docker-local.bash  docker-network.bash
2. express_mongoose/controllers/: emailController.js
2. rust_grpc/local/tonic_server/: Cargo.toml
2. rust_grpc/local/warp_client/: Dockerfile
3. express_auth_redis_postgresql/: package.json
3. rust_grpc/: README.md  curl-format.md  db.bash
3. rust_grpc/deploy_to_aws/deploy_the_cluster_with_fargate/: docker-compose.yml
3. rust_grpc/local/tonic_server/: Cargo.toml  user.sql
3. rust_grpc/local/warp_client/: docker-build.bash
3. rust_grpc/tonic_server/: Dockerfile  docker-build.bash  docker-local.bash  user.sql
3. rust_grpc/warp_client/: docker-local.bash
4. express_auth_redis_postgresql/: README.md  package.json
4. libp2p/: README.md
4. libp2p/js/1. get-started/: package.json
4. libp2p/js/2. chat/: package.json
5. libp2p/: README.md
deploy/1. react_responsive/: Dockerfile  docker-build.bash  docker-local.bash
deploy/2. express_mongoose/: docker-build.bash  package.json  server.js
deploy/3. rust_grpc/: .loadtest.md.swp  loadtest.bash
deploy/3. rust_grpc/clients/actix_web/hello_world/: Cargo.toml
deploy/3. rust_grpc/clients/actix_web/hello_world/src/: main.rs
deploy/3. rust_grpc/clients/tonic/: Cargo.toml  Cargo_c.toml
deploy/3. rust_grpc/clients/tonic/refer/: routing.rs
deploy/3. rust_grpc/clients/tonic/src/: main.rs
refer/: README.md
(+58 files in other folders)
