[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

[dependencies]
tonic = { version = "0.1.0-beta.1", features = ["tls"] }
bytes = "0.4"
prost = "0.5"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3" 

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#
rand = "0.7.2"

# Tracing
tracing = "0.1"
tracing-subscriber =  { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"

# Required for wellknown types
prost-types = "0.5"
#
rust-argon2 = "0.6.0"

[build-dependencies]
tonic-build = "0.1.0-beta.1"

