[package]
name = "hello_world"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web", branch = "master" }
actix-rt = "1.0.0"

